--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "ccindex",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.0.2",
+    "@rails/webpacker": "^3.2.0",
     "axios": "^0.17.1",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "cryptocompare": "^0.3.0",
+    "moment": "^2.20.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-awesome-countdowntimer": "^1.1.1",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0"
   },
   "devDependencies": {
+    "react-countdown-now": "^1.2.0",
     "webpack-dev-server": "^2.9.7"
   }
 }
