--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-awesome-countdowntimer": "^1.1.1",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^16.2.0",
-    "react-router": "^4.2.0"
+    "react-easy-chart": "^1.0.0",
+    "react-highcharts": "^15.0.0",
+    "react-router": "^4.2.0",
+    "recharts": "^1.0.0-beta.6",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "react-countdown-now": "^1.2.0",
